<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">CQVIPExamTest</string>
    <string name="generic_server_down">server no response</string>
    <string name="need_pwd">Please enter password</string>
    <string name="need_username">Please enter username</string>
    <string name="hellotome">Please login first</string>
    <string name="no_internet">not available network</string>
    <string name="generic_error">connection error</string>
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="switch_on">on</string>
    <string name="switch_off">off</string>
    <string name="alert_dialog_cancel">cancel</string>
    <string name="alert_dialog_confirm">confirm</string>
    <string name="alert_dialog_save">save options</string>
    <string name="alert_dialog_unsave">exit without saving</string>
    <string name="alert_dialog_cancelquite">back</string>
    <string name="tips_right">√Congratulations, you are right</string>
    <string name="tips_wrong">×Sorry,you are wrong</string>
    <string name="tips_noanswer">No reference answer to the question</string>
    <string name="tips_unlogin">Please login first</string>
    <string name="tips_login_sucess">login sucess!</string>
    <string name="tips_login_fail">login fail!</string>
    <string name="tips_login_fail_detail">login fail,please check you username and password</string>
    <string name="btn_show_subtitle">View title</string>
    <string name="btn_hide_subtitle">Hide title</string>
    <string name="show_answer">View answer</string>
    <string name="hide_answer">Hide answer</string>
    <string name="favorite_success">Add collection success</string>
    <string name="favorite_fail">Add collection fail</string>
    <string name="deletefavorite_success">cancel collection success</string>
    <string name="deletefavorite_fail">cancel collection fail</string>
    <string name="DoneExamPaper">My done paper</string>
    <string name="DoingExamPaper">My doing paper</string>
    <string name="favoriteExamPaper">我收藏的试卷</string>
    <string name="about_html">包库版：http://vers.cqvip.com</string>
    <string name="about_phone">全国客服电话：400-638-5550</string>
    <string name="about_time">值班时间：9:00-17:00（国家法定工作日）</string>
    <string name="about_title">VERS维普考试资源系统</string>
    <string name="about_version">android v1.1.0</string>
    <string name="about_own">重庆维普资讯有限公司 版权所有</string>
    <string name="exam_answerdesc_tips">Analysis:</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="btn_login">login</string>
    <string name="usernam">loginname:</string>
    <string name="update_at">updatetime:</string>
    
    <string name="tips_del_sucess">delete sucess</string>
    <string name="tips_del_fail">delete fail</string>
        <string name="pull_refresh">Drop Down to refresh&#8230;</string>
    <string name="release_to_refresh">Release to refresh&#8230;</string>
    <string name="refreshing" tools:ignore="TypographyEllipsis">Loading&#8230;</string>
    <string name="update_time">refresh</string>
    
    <string name="real_paper">True Examination</string>
    <string name="model_paper">Model Examination</string>
    
    

</resources>
